--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>https://tribuivnt.github.io/about/</title><link rel=canonical href=https://tribuivnt.github.io/about/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://tribuivnt.github.io/about/"></head></html>
+<!doctype html><html><head><title>https://blog.tbui.xyz/about/</title><link rel=canonical href=https://blog.tbui.xyz/about/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://blog.tbui.xyz/about/"></head></html>
