--- a/search/index.html
+++ b/search/index.html
@@ -1,14 +1,14 @@
 <!doctype html><html lang=en-us>
 <head><meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content><title>Search</title>
-<link rel=canonical href=https://tribuivnt.github.io/search/>
+<link rel=canonical href=https://blog.tbui.xyz/search/>
 <link rel=stylesheet href=/scss/style.min.css><meta property="og:title" content="Search">
 <meta property="og:description" content>
-<meta property="og:url" content="https://tribuivnt.github.io/search/">
+<meta property="og:url" content="https://blog.tbui.xyz/search/">
 <meta property="og:site_name" content="Example Site">
 <meta property="og:type" content="article"><meta property="article:section" content="Page">
 <meta name=twitter:title content="Search">
-<meta name=twitter:description content><link rel=alternate type=application/json href=https://tribuivnt.github.io/search/index.json><link rel=preload href=https://tribuivnt.github.io/search/index.json as=fetch crossorigin=anonymous>
+<meta name=twitter:description content><link rel=alternate type=application/json href=https://blog.tbui.xyz/search/index.json><link rel=preload href=https://blog.tbui.xyz/search/index.json as=fetch crossorigin=anonymous>
 </head>
 <body class=template-search>
 <script>(function(){const a='StackColorScheme';localStorage.getItem(a)||localStorage.setItem(a,"auto")})()</script><script>(function(){const b='StackColorScheme',a=localStorage.getItem(b),c=window.matchMedia('(prefers-color-scheme: dark)').matches===!0;a=='dark'||a==='auto'&&c?document.documentElement.dataset.scheme='dark':document.documentElement.dataset.scheme='light'})()</script>
@@ -23,7 +23,7 @@
 <img src=/img/avatar_huda2458f72ce188392d75c5d51cd8e24e_373_300x0_resize_box_3.png width=300 height=300 class=site-logo loading=lazy alt=Avatar>
 <span class=emoji>🍥</span>
 </figure>
-<h1 class=site-name><a href=https://tribuivnt.github.io>Example Site</a></h1>
+<h1 class=site-name><a href=https://blog.tbui.xyz>Example Site</a></h1>
 <h2 class=site-description>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 </header>
 <ol class=menu id=main-menu>
@@ -53,7 +53,7 @@
 </ol>
 </aside>
 <main class="main full-width">
-<form action=https://tribuivnt.github.io/search/ class=search-form data-json=https://tribuivnt.github.io/search/index.json>
+<form action=https://blog.tbui.xyz/search/ class=search-form data-json=https://blog.tbui.xyz/search/index.json>
 <p>
 <label>Search</label>
 <input name=keyword placeholder="Type something...">
