--- a/draft/placeholder-text/index.html
+++ b/draft/placeholder-text/index.html
@@ -95,6 +95,13 @@ Lorem Ipsum Dolor Si Amet
 <h2 class=section-title>Related contents</h2>
 <div class=related-contents>
 <div class="flex article-list--tile">
+<article>
+<a href=/p/hello-world/>
+<div class=article-details>
+<h2 class=article-title>Hello, world</h2>
+</div>
+</a>
+</article>
 <article class=has-image>
 <a href=/draft/test-chinese/>
 <div class=article-image>
