--- a/draft/test-chinese/index.html
+++ b/draft/test-chinese/index.html
@@ -105,6 +105,13 @@ Test
 <h2 class=section-title>Related contents</h2>
 <div class=related-contents>
 <div class="flex article-list--tile">
+<article>
+<a href=/p/hello-world/>
+<div class=article-details>
+<h2 class=article-title>Hello, world</h2>
+</div>
+</a>
+</article>
 <article class=has-image>
 <a href=/draft/placeholder-text/>
 <div class=article-image>
