--- a/search/index.html
+++ b/search/index.html
@@ -5,7 +5,7 @@
 <link rel=stylesheet href=/scss/style.min.css><meta property="og:title" content="Search">
 <meta property="og:description" content>
 <meta property="og:url" content="https://blog.tbui.xyz/search/">
-<meta property="og:site_name" content="Example Site">
+<meta property="og:site_name" content="Blog using Hugo and Github">
 <meta property="og:type" content="article"><meta property="article:section" content="Page">
 <meta name=twitter:title content="Search">
 <meta name=twitter:description content><link rel=alternate type=application/json href=https://blog.tbui.xyz/search/index.json><link rel=preload href=https://blog.tbui.xyz/search/index.json as=fetch crossorigin=anonymous>
@@ -23,7 +23,7 @@
 <img src=/img/avatar_huda2458f72ce188392d75c5d51cd8e24e_373_300x0_resize_box_3.png width=300 height=300 class=site-logo loading=lazy alt=Avatar>
 <span class=emoji>🍥</span>
 </figure>
-<h1 class=site-name><a href=https://blog.tbui.xyz>Example Site</a></h1>
+<h1 class=site-name><a href=https://blog.tbui.xyz>Blog using Hugo and Github</a></h1>
 <h2 class=site-description>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 </header>
 <ol class=menu id=main-menu>
@@ -68,7 +68,7 @@
 <section class=copyright>
 &copy;
 2020 -
-2021 Example Site
+2021 Blog using Hugo and Github
 </section>
 <section class=powerby>
 Built with <a href=https://gohugo.io/ target=_blank rel=noopener>Hugo</a> <br>
