--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@ on-phone--column extended">
 <span class=emoji>🍥</span>
 </figure>
 <h1 class=site-name><a href=https://blog.tbui.xyz>Blog using Hugo and Github</a></h1>
-<h2 class=site-description>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+<h2 class=site-description>...updating...</h2>
 </header>
 <ol class=menu id=main-menu>
 <li>
