--- a/draft/emoji-support/index.html
+++ b/draft/emoji-support/index.html
@@ -27,7 +27,7 @@ on-phone--column extended">
 <span class=emoji>🍥</span>
 </figure>
 <h1 class=site-name><a href=https://blog.tbui.xyz>Blog using Hugo and Github</a></h1>
-<h2 class=site-description>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+<h2 class=site-description>...updating...</h2>
 </header>
 <ol class=menu id=main-menu>
 <li>
@@ -112,7 +112,7 @@ Guide to emoji usage in Hugo
 <div class=related-contents>
 <div class="flex article-list--tile">
 <article>
-<a href=/p/hello-world/>
+<a href=/posts/hello-world/>
 <div class=article-details>
 <h2 class=article-title>Hello, world</h2>
 </div>
