--- a/draft/placeholder-text/index.html
+++ b/draft/placeholder-text/index.html
@@ -96,7 +96,7 @@ Lorem Ipsum Dolor Si Amet
 <div class=related-contents>
 <div class="flex article-list--tile">
 <article>
-<a href=/p/hello-world/>
+<a href=/posts/hello-world/>
 <div class=article-details>
 <h2 class=article-title>Hello, world</h2>
 </div>
