--- a/draft/test-chinese/index.html
+++ b/draft/test-chinese/index.html
@@ -106,7 +106,7 @@ Test
 <div class=related-contents>
 <div class="flex article-list--tile">
 <article>
-<a href=/p/hello-world/>
+<a href=/posts/hello-world/>
 <div class=article-details>
 <h2 class=article-title>Hello, world</h2>
 </div>
