deploy: dfea64cb1b4dd7caa6e80bb1db4654e17e882666

--- a/draft/emoji-support/index.html
+++ b/draft/emoji-support/index.html
@@ -112,6 +112,13 @@ Guide to emoji usage in Hugo
 <div class=related-contents>
 <div class="flex article-list--tile">
 <article>
+<a href=/posts/hello-all/>
+<div class=article-details>
+<h2 class=article-title>Hello, all</h2>
+</div>
+</a>
+</article>
+<article>
 <a href=/posts/hello-world/>
 <div class=article-details>
 <h2 class=article-title>Hello, world</h2>
