--- a/draft/placeholder-text/index.html
+++ b/draft/placeholder-text/index.html
@@ -96,6 +96,13 @@ Lorem Ipsum Dolor Si Amet
 <div class=related-contents>
 <div class="flex article-list--tile">
 <article>
+<a href=/posts/hello-all/>
+<div class=article-details>
+<h2 class=article-title>Hello, all</h2>
+</div>
+</a>
+</article>
+<article>
 <a href=/posts/hello-world/>
 <div class=article-details>
 <h2 class=article-title>Hello, world</h2>
