--- a/draft/test-chinese/index.html
+++ b/draft/test-chinese/index.html
@@ -106,6 +106,13 @@ Test
 <div class=related-contents>
 <div class="flex article-list--tile">
 <article>
+<a href=/posts/hello-all/>
+<div class=article-details>
+<h2 class=article-title>Hello, all</h2>
+</div>
+</a>
+</article>
+<article>
 <a href=/posts/hello-world/>
 <div class=article-details>
 <h2 class=article-title>Hello, world</h2>
